// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render CardInnerBody 1`] = `
<div
  class="components-surface wp-components-surface components-card wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  >
    <div
      class="components-flex wp-components-flex components-card-header wp-components-card-header css-okk3an"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="components-card-inner-body wp-components-card-inner-body css-rlgt1m"
      data-g2-c16t="true"
      data-g2-component="CardInnerBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="components-flex wp-components-flex components-card-footer wp-components-card-footer css-k5kjzk"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <button
        aria-busy="false"
        class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-f610zs"
        data-active="false"
        data-destructive="false"
        data-focused="false"
        data-g2-c16t="true"
        data-g2-component="Button"
        data-icon="false"
        type="button"
      >
        <span
          class="components-flex-item wp-components-flex-item css-19mrak6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Agree
        </span>
        <span
          class="components-elevation wp-components-elevation css-17x6dun"
          data-g2-c16t="true"
          data-g2-component="ButtonElevation"
        />
      </button>
    </div>
  </div>
  <div
    class="components-elevation wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="components-surface wp-components-surface components-card wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  >
    <div
      class="components-flex wp-components-flex components-card-header wp-components-card-header css-okk3an"
      data-g2-c16t="true"
      data-g2-component="CardHeader"
      title="Olaf"
    />
    <div
      class="components-scrollable wp-components-scrollable components-card-body wp-components-card-body css-1un9gzz"
      data-g2-c16t="true"
      data-g2-component="CardBody"
    >
      Some people are worth melting for.
    </div>
    <div
      class="components-flex wp-components-flex components-card-footer wp-components-card-footer css-k5kjzk"
      data-g2-c16t="true"
      data-g2-component="CardFooter"
    >
      <button
        aria-busy="false"
        class="components-flex wp-components-flex components-base-button wp-components-base-button components-button wp-components-button css-f610zs"
        data-active="false"
        data-destructive="false"
        data-focused="false"
        data-g2-c16t="true"
        data-g2-component="Button"
        data-icon="false"
        type="button"
      >
        <span
          class="components-flex-item wp-components-flex-item css-19mrak6"
          data-g2-c16t="true"
          data-g2-component="ButtonContent"
        >
          Agree
        </span>
        <span
          class="components-elevation wp-components-elevation css-17x6dun"
          data-g2-c16t="true"
          data-g2-component="ButtonElevation"
        />
      </button>
    </div>
  </div>
  <div
    class="components-elevation wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation css-1873flw"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render elevation 1`] = `
<div
  class="components-surface wp-components-surface components-card wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="components-elevation wp-components-elevation css-18hqkt0"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation css-fmvmxl"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;

exports[`props should render no elevation 1`] = `
<div
  class="components-surface wp-components-surface components-card wp-components-card css-11lo8b5"
  data-g2-c16t="true"
  data-g2-component="Card"
>
  <div
    class="css-e1hgjj"
    data-g2-component="CardContent"
  />
  <div
    class="components-elevation wp-components-elevation css-16j6c8z"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
  <div
    class="components-elevation wp-components-elevation css-10dmg8u"
    data-g2-c16t="true"
    data-g2-component="CardElevation"
  />
</div>
`;
